--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -17,24 +17,103 @@
     <string name="encryption_method">Verschlüsselungsmethode</string>
     <string name="cancel">Abbrechen</string>
     <string name="permission_denied">Erlaubnis verweigert</string>
-    <string name="zip_creation_failed">Fehler beim Erstellen der Zip-Datei</string>
+    <string name="zip_creation_failed">Fehler beim Archivieren der ZIP-Datei</string>
     <string name="extract">Entpacken</string>
     <string name="donate">Spenden</string>
     <string name="open_folder">Verzeichnis öffnen</string>
     <string name="extraction_success">Datei erfolgreich extrahiert</string>
     <string name="share">App-Link teilen</string>
     <string name="enter_password">Password eingeben</string>
-    <string name="extraction_failed">Entpacken fehlgeschlagen:</string>
-    <string name="zip_creation_success">Zip-Datei erfolgreich erstellt</string>
-    <string name="sevenz_creation_success">7z-Datei erfolgreich erstellt</string>
-    <string name="sevenz_creation_failed">Erstellen der 7z-Datei fehlgeschlagen</string>
-    <string name="compress_sevenz">Komprimiere 7z</string>
+    <string name="extraction_failed">Extrahierung fehlgeschlagen</string>
+    <string name="zip_creation_success">ZIP-Datei erfolgreich archiviert</string>
+    <string name="sevenz_creation_success">7z-Datei erfolgreich archiviert</string>
+    <string name="sevenz_creation_failed">Fehler beim Archivieren der 7z-Datei</string>
+    <string name="compress_sevenz">7z archivieren</string>
     <string name="thread_count">Anzahl Threads</string>
     <string name="max_available_thread">0 für maximal verfügbare Threads</string>
-    <string name="enter_name_of_archive_optional">Archivnamen eingeben (optional)</string>
+    <string name="enter_name_of_archive_optional">Archivname</string>
     <string name="solid_compression">Solide Kompression (tar)</string>
-    <string name="_ten">64kb (Standard)</string>
+    <string name="_ten">64 kb (Standard)</string>
     <string name="split_size_mb">Größe Teilarchiv</string>
-    <string name="split_zip">Zip aufteilen</string>
+    <string name="split_zip">ZIP aufteilen</string>
     <string name="encryption_strength">Verschlüsselungsstärke</string>
+    <string name="storage">Speicherung</string>
+    <string name="home">Home</string>
+    <string name="file_size">Größe</string>
+    <string name="last_modified">Letzte Änderung</string>
+    <string name="file_info">Dateiinfo</string>
+    <string name="copying_files_progress">Dateien werden kopiert: %1$d/%2$d</string>
+    <string name="moving_files_progress">Dateien werden verschoben: %1$d/%2$d</string>
+    <string name="internal_storage">Interne Speicherung</string>
+    <string name="root">Root</string>
+    <string name="directory_empty">Ordner ist leer</string>
+    <string name="paste">Einfügen</string>
+    <string name="archive">Archiv</string>
+    <string name="show_hide_selected_files">Ausgewählte Dateien anzeigen/ausblenden</string>
+    <string name="background">Hintergrund</string>
+    <string name="open_with">Öffnen mit</string>
+    <string name="compress_with">Komprimieren mit:</string>
+    <string name="confirm_delete">Löschbestätigung</string>
+    <string name="confirm_delete_message">Sind Sie sicher, dass Sie dieses Element löschen möchten?</string>
+    <string name="delete">Löschen</string>
+    <string name="file_path">Pfad</string>
+    <string name="multi_part_extract">Multi Part Extract:</string>
+    <string name="copy_text">Kopieren</string>
+    <string name="info_tip">Nützlicher Tipp</string>
+    <string name="deleting_files">Dateien werden gelöscht: %1$d/%2$d</string>
+    <string name="extracting_progress">Wird extrahiert … %1$d %%</string>
+    <string name="compressing_progress">Wird archiviert … %1$d %%</string>
+    <string name="compression_ongoing">Wird komprimiert …</string>
+    <string name="delete_files_notification_name">Datei löschen</string>
+    <string name="copy_move_files_notification_name">Dateien kopieren/verschieben</string>
+    <string name="extract_archive_notification_name">Archiv extrahieren</string>
+    <string name="compress_archive_notification_name">Archiv komprimieren</string>
+    <string name="source_code">Quellcode</string>
+    <string name="license">Lizenz</string>
+    <string name="report_an_issue">Fehler melden</string>
+    <string name="about">Über</string>
+    <string name="grant_access">Zugriff gewähren</string>
+    <string name="extraction_ongoing">Wird extrahiert …</string>
+    <string name="archive_ongoing">Wird archiviert …</string>
+    <string name="privacy_policy">Datenschutzerklärung</string>
+    <string name="crash_log">Absturzprotokoll</string>
+    <string name="move">Verschieben nach</string>
+    <string name="copy_to">Kopieren nach</string>
+    <string name="action_settings">Einstellungen</string>
+    <string name="storage_access_permission_text">Diese App benötigt Zugriff auf den Speicher Ihres Geräts, um ordnungsgemäß zu funktionieren. Bitte erteilen Sie die erforderlichen Berechtigungen.</string>
+    <string name="sd_card">SD-Karte</string>
+    <string name="root_access">Root-Zugang</string>
+    <string name="root_access_summary">Root-Verzeichnis-Zugang aktivieren</string>
+    <string name="info_tip_description">● Lang drücken Sie Dateien und Ordner oder klicken Sie auf Datei/Ordner-Symbole, um sie für die Archivierung auszuwählen.\n\n● Klicken Sie auf eine Datei, um das Extraktionsmenü zur Auswahl der Extraktionsoptionen anzuzeigen.\n\n● Dateien, die mit dem Menü \"Öffnen mit\" von OS extrahiert werden, werden standardmäßig im internen Speicher/ZipXtract gespeichert. Ändern Sie dies in App-Einstellungen.\n\n● Der Standard-Standort für Archivierung oder Archivierung (innerhalb der App) ist das Stammverzeichnis der jeweiligen Datei(en). Dies kann in den App-Einstellungen geändert werden.</string>
+    <string name="select_all">Alles auswählen</string>
+    <string name="search">Suchen</string>
+    <string name="order">Reihenfolge</string>
+    <string name="ascending">Aufsteigend</string>
+    <string name="descending">Absteigend</string>
+    <string name="sort_by">Sortieren nach</string>
+    <string name="name">Name</string>
+    <string name="size">Größe</string>
+    <string name="time_of_creation">Geändert</string>
+    <string name="extension">Erweiterung</string>
+    <string name="close">Schließen</string>
+    <string name="extract_path">Ordner für extrahierte Dateien</string>
+    <string name="archive_path">Ordner für archivierte Dateien</string>
+    <string name="archive_path_summary">Ändern Sie den Standard-Extrakt-Ordner.\nStandard ist \"Elternordner\"</string>
+    <string name="extract_path_summary">Ändern Sie den Standard-Extrakt-Ordner.\nStandard ist \"Elternordner\" oder Interner Speicher/ZipXtract (für \"Öffnen mit\" Menü extrahiert Archiv)</string>
+    <string name="compress_tar">TAR archivieren</string>
+    <string name="compression_success">Komprimierung erfolgreich</string>
+    <string name="archive_success">Datei erfolgreich archiviert</string>
+    <string name="tar_creation_success">TAR-Datei erfolgreich archiviert</string>
+    <string name="file_deleted">Gelöscht</string>
+    <string name="operation_cancelled">Vorgang abgebrochen</string>
+    <string name="tar_creation_failed">Fehler beim Archivieren der TAR-Datei</string>
+    <string name="compression_failed">Komprimierung fehlgeschlagen</string>
+    <string name="general_error_msg">Ein unerwarteter Fehler ist aufgetreten</string>
+    <string name="unsupported_compression_format">Dieses Kompressionsformat wird nicht unterstützt</string>
+    <string name="access_denied">Zugang verweigert</string>
+    <string name="no_files_to_archive">Für die Archivierung wurden keine Dateien ausgewählt</string>
+    <string name="sd_card_not_available">SD-Karte oder externer Speicherung nicht erkannt</string>
+    <string name="copying_files">Wird kopiert …</string>
+    <string name="moving_files">Wird verschoben …</string>
+    <string name="delete_ongoing">Wird gelöscht …</string>
 </resources>
