--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,26 +7,26 @@
     <string name="compression_method">Способ сжатия</string>
     <string name="ok">OK</string>
     <string name="enter_password">Введите пароль</string>
-    <string name="zip_creation_success">Zip-файл создан успешно</string>
-    <string name="zip_creation_failed">Ошибка создания файла zip</string>
+    <string name="zip_creation_success">Zip-архив создан успешно</string>
+    <string name="zip_creation_failed">Ошибка при создании ZIP-архива</string>
     <string name="copied_to_clipboard">Скопировано в буфер обмена</string>
     <string name="share">Поделиться ссылкой на приложение</string>
-    <string name="sevenz_creation_success">7z файл создан успешно</string>
-    <string name="enter_name_of_archive_optional">Введите название архива (необязательно)</string>
+    <string name="sevenz_creation_success">7z-архив создан успешно</string>
+    <string name="enter_name_of_archive_optional">Имя архива</string>
     <string name="split_size_mb">Разделить по размеру</string>
-    <string name="split_zip">Разделить Zip</string>
+    <string name="split_zip">Разделить ZIP</string>
     <string name="_ten">По умолчанию 64kb</string>
     <string name="no_file_selected">Нет выбранных файлов</string>
-    <string name="create_zip">Сжать ZIP</string>
+    <string name="create_zip">Сжать в ZIP-архив</string>
     <string name="open_folder">Открыть папку</string>
     <string name="permission_denied">Разрешение отклонено</string>
     <string name="folder">Папка</string>
     <string name="cancel">Отмена</string>
-    <string name="extraction_failed">Не удалось извлечь:</string>
+    <string name="extraction_failed">Извлечение не удалось</string>
     <string name="no_password">Нет пароля</string>
     <string name="extraction_success">Файл извлеченён успешно</string>
-    <string name="sevenz_creation_failed">Ошибка создания файла 7z</string>
-    <string name="compress_sevenz">Сжать в 7z</string>
+    <string name="sevenz_creation_failed">Ошибка при создании 7z-архива</string>
+    <string name="compress_sevenz">Сжать в 7z-архив</string>
     <string name="thread_count">Количество потоков</string>
     <string name="max_available_thread">0 для максимально доступных потоков</string>
     <string name="encryption_strength">Стойкость шифрования</string>
@@ -37,4 +37,83 @@
 \nЕсли безопасность является вашей основной целью, мы настоятельно рекомендуем использовать AES, несмотря на более длительное время обработки.</string>
     <string name="liberapay">Liberapay</string>
     <string name="solid_compression">Непрерывный архив</string>
+    <string name="unsupported_compression_format">Этот формат сжатия не поддерживается</string>
+    <string name="compression_ongoing">Сжатие…</string>
+    <string name="delete_files_notification_name">Удалить файл</string>
+    <string name="root_access">Root-доступ</string>
+    <string name="root_access_summary">Включить доступ к root каталогу</string>
+    <string name="internal_storage">Внутреннее хранилище</string>
+    <string name="root">Root</string>
+    <string name="directory_empty">Папка пуста</string>
+    <string name="paste">Вставить</string>
+    <string name="storage">Накопитель</string>
+    <string name="archive">Архив</string>
+    <string name="home">Домой</string>
+    <string name="show_hide_selected_files">Показать/Скрыть выбранные файлы</string>
+    <string name="background">Фон</string>
+    <string name="open_with">Открыть с</string>
+    <string name="compress_with">Сжать с:</string>
+    <string name="confirm_delete">Подтверждение удаления</string>
+    <string name="confirm_delete_message">Вы уверены, что хотите удалить этот объект?</string>
+    <string name="delete">Удалить</string>
+    <string name="file_path">Путь</string>
+    <string name="file_size">Размер</string>
+    <string name="last_modified">Последнее изменение</string>
+    <string name="file_info">Сведения о файле</string>
+    <string name="multi_part_extract">Массовое извлечение:</string>
+    <string name="copy_text">Копировать</string>
+    <string name="info_tip">Полезный совет</string>
+    <string name="general_error_msg">Возникла неожиданная ошибка</string>
+    <string name="access_denied">Доступ запрещен</string>
+    <string name="no_files_to_archive">Файлы не были выбраны для архивации</string>
+    <string name="sd_card_not_available">SD-карта или внешний накопитель не обнаружены</string>
+    <string name="copying_files">Копируется…</string>
+    <string name="moving_files">Перемещается…</string>
+    <string name="delete_ongoing">Удаляется…</string>
+    <string name="extraction_ongoing">Извлекаться…</string>
+    <string name="archive_ongoing">Архивация…</string>
+    <string name="copying_files_progress">Копирование файлов: %1$d/%2$d</string>
+    <string name="moving_files_progress">Перемещение файлов: %1$d/%2$d</string>
+    <string name="deleting_files">Удаление файлов: %1$d/%2$d</string>
+    <string name="extracting_progress">Извлекается... %1$d %%</string>
+    <string name="compressing_progress">Архивация... %1$d %%</string>
+    <string name="copy_move_files_notification_name">Копировать/Переместить файлы</string>
+    <string name="extract_archive_notification_name">Извлечь архив</string>
+    <string name="compress_archive_notification_name">Сжать архив</string>
+    <string name="privacy_policy">Политика конфиденциальности</string>
+    <string name="source_code">Исходный код</string>
+    <string name="crash_log">Протокол сбоев</string>
+    <string name="move">Переместить в</string>
+    <string name="copy_to">Копировать в</string>
+    <string name="action_settings">Настройки</string>
+    <string name="select_all">Выбрать все</string>
+    <string name="sd_card">SD-карта</string>
+    <string name="license">Лицензия</string>
+    <string name="report_an_issue">Сообщить о проблеме</string>
+    <string name="about">О приложении</string>
+    <string name="grant_access">Предоставить доступ</string>
+    <string name="storage_access_permission_text">Это приложение требует доступа к памяти устройства для корректной работы. Пожалуйста, предоставьте необходимые разрешения.</string>
+    <string name="info_tip_description">● Долгое нажатие на файлы и папки или клик по иконкам файла/папки для их выбора для архивации.\n\n● Нажмите на файл, чтобы отобразить меню извлечения для выбора вариантов извлечения.\n\n● Файлы, извлеченные с помощью меню \"Открыть с помощью\" ОС, по умолчанию хранятся в Внутреннее накопители/ZipXtract. Это можно изменить в настройках приложения.\n\n● Место по умолчанию для архивации или извлечения архивов (внутри приложения) — это родительская директория соответствующих файлов. Это можно изменить в настройках приложения.</string>
+    <string name="search">Поиск</string>
+    <string name="order">Порядок</string>
+    <string name="ascending">По возрастанию</string>
+    <string name="descending">По убыванию</string>
+    <string name="sort_by">Сортировать</string>
+    <string name="name">Название</string>
+    <string name="size">Размер</string>
+    <string name="time_of_creation">Изменение</string>
+    <string name="extension">Расширение</string>
+    <string name="close">Закрыть</string>
+    <string name="extract_path">Папка извлеченных файлов</string>
+    <string name="archive_path">Папка архивных файлов</string>
+    <string name="archive_path_summary">Укажите папку извлечения по умолчанию. \nПо умолчанию это \"родительская папка\"</string>
+    <string name="extract_path_summary">Укажите папку извлечения по умолчанию. \nПо умолчанию используется \"родительская папка\" или Внутреннее накопители/ZipXtract (для извлеченного архива в меню \"Открыть с помощью\")</string>
+    <string name="compress_tar">Сжать в TAR-архив</string>
+    <string name="compression_success">Сжатие успешно</string>
+    <string name="archive_success">Архив создан успешно</string>
+    <string name="tar_creation_success">TAR архив создан успешно</string>
+    <string name="file_deleted">Удалено</string>
+    <string name="operation_cancelled">Операция отменена</string>
+    <string name="tar_creation_failed">Ошибка при создании TAR-архива</string>
+    <string name="compression_failed">Сжатие не удалось</string>
 </resources>
