--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -2,18 +2,18 @@
 <resources>
     <string name="compression_level">Рівень стиснення</string>
     <string name="enter_password">Введіть пароль</string>
-    <string name="zip_creation_failed">Помилка створення zip-файлу</string>
+    <string name="zip_creation_failed">Не вдалося архівувати ZIP-файл</string>
     <string name="permission_denied">У дозволі відмовлено</string>
     <string name="cancel">Скасувати</string>
-    <string name="extraction_failed">Не вдалося видобути:</string>
-    <string name="sevenz_creation_success">Файл 7z успішно створено</string>
+    <string name="extraction_failed">Не вдалося видобути</string>
+    <string name="sevenz_creation_success">7z-файл успішно заархівовано</string>
     <string name="max_available_thread">0 для максимальної кількості доступних потоків</string>
     <string name="solid_compression">Цілісне стиснення</string>
     <string name="encryption_strength">Надійність шифрування</string>
     <string name="_ten">Типово – 64kb</string>
     <string name="extract">Розпакувати</string>
     <string name="no_file_selected">Немає вибраного файлу</string>
-    <string name="create_zip">Стиснути zip</string>
+    <string name="create_zip">Архівувати в ZIP</string>
     <string name="compression_method">Метод стиснення</string>
     <string name="folder">Тека</string>
     <string name="donate">Пожертвувати</string>
@@ -25,16 +25,95 @@
 \n
 \nЯкщо безпека є для вас першочерговим завданням, ми наполегливо рекомендуємо використовувати AES, попри його довший час обробки.</string>
     <string name="ok">Гаразд</string>
-    <string name="zip_creation_success">Zip-файл успішно створено</string>
+    <string name="zip_creation_success">ZIP-файл успішно заархівовано</string>
     <string name="open_folder">Відкрити теку</string>
     <string name="extraction_success">Файл успішно розпаковано</string>
     <string name="copied_to_clipboard">Скопійовано в буфер обміну</string>
     <string name="no_password">Немає пароля</string>
     <string name="share">Поділитися посиланням на застосунок</string>
-    <string name="sevenz_creation_failed">Помилка при створенні 7z-файлу</string>
-    <string name="compress_sevenz">Стиснути в 7z</string>
+    <string name="sevenz_creation_failed">Не вдалося архівувати 7z-файл</string>
+    <string name="compress_sevenz">Архівувати в 7z</string>
     <string name="thread_count">Кількість потоків</string>
     <string name="split_size_mb">Розмір розділу</string>
-    <string name="split_zip">Розділити zip</string>
-    <string name="enter_name_of_archive_optional">Введіть назву архіва (необов\'язково)</string>
+    <string name="split_zip">Розділити ZIP</string>
+    <string name="enter_name_of_archive_optional">Назва архіву</string>
+    <string name="privacy_policy">Політика приватності</string>
+    <string name="source_code">Вихідний код</string>
+    <string name="license">Ліцензії</string>
+    <string name="report_an_issue">Повідомити про проблему</string>
+    <string name="about">Про застосунок</string>
+    <string name="copying_files">Копіювання…</string>
+    <string name="moving_files">Переміщення…</string>
+    <string name="delete_ongoing">Видалення…</string>
+    <string name="extraction_ongoing">Видобування…</string>
+    <string name="compression_ongoing">Стиснення…</string>
+    <string name="delete_files_notification_name">Видалити файл</string>
+    <string name="copy_move_files_notification_name">Копіювати / перемістити файли</string>
+    <string name="extract_archive_notification_name">Розпакувати архів</string>
+    <string name="archive">Архів</string>
+    <string name="home">Головна</string>
+    <string name="show_hide_selected_files">Показати / Приховати вибрані файли</string>
+    <string name="background">Тло</string>
+    <string name="open_with">Відкрити за допомогою</string>
+    <string name="compress_with">Стиснути за допомогою:</string>
+    <string name="confirm_delete">Підтвердження видалення</string>
+    <string name="confirm_delete_message">Ви впевнені, що хочете видалити цей елемент?</string>
+    <string name="delete">Видалити</string>
+    <string name="file_path">Шлях</string>
+    <string name="file_size">Розмір</string>
+    <string name="last_modified">Востаннє змінено</string>
+    <string name="file_info">Інформація про файл</string>
+    <string name="multi_part_extract">Багатокомпонентне витягнення:</string>
+    <string name="copy_text">Копіювати</string>
+    <string name="info_tip">Корисна порада</string>
+    <string name="access_denied">У доступі відмовлено</string>
+    <string name="no_files_to_archive">Файли для архівування не вибрано</string>
+    <string name="sd_card_not_available">SD-карту або зовнішнє сховище не виявлено</string>
+    <string name="archive_ongoing">Архівування…</string>
+    <string name="copying_files_progress">Копіювання файлів: %1$d / %2$d</string>
+    <string name="moving_files_progress">Переміщення файлів: %1$d / %2$d</string>
+    <string name="deleting_files">Видалення файлів: %1$d / %2$d</string>
+    <string name="extracting_progress">Видобування… %1$d %%</string>
+    <string name="compressing_progress">Архівування ... %1$d %%</string>
+    <string name="compress_archive_notification_name">Стиснути архів</string>
+    <string name="crash_log">Журнал збоїв</string>
+    <string name="move">Перейти до</string>
+    <string name="copy_to">Копіювати в</string>
+    <string name="action_settings">Налаштування</string>
+    <string name="select_all">Вибрати все</string>
+    <string name="search">Пошук</string>
+    <string name="order">Порядок</string>
+    <string name="grant_access">Надати доступ</string>
+    <string name="storage_access_permission_text">Для належної роботи цього застосунку потрібен доступ до пам\'яті вашого пристрою. Надайте необхідні дозволи.</string>
+    <string name="sd_card">SD-карта</string>
+    <string name="root_access">Root доступ</string>
+    <string name="root_access_summary">Увімкнути доступ до root каталогів</string>
+    <string name="internal_storage">Внутрішнє сховище</string>
+    <string name="root">Root</string>
+    <string name="directory_empty">Тека пуста</string>
+    <string name="paste">Вставити</string>
+    <string name="storage">Сховище</string>
+    <string name="info_tip_description">● Утримуйте файли та папки або клацайте піктограми файлів/папок, щоб вибрати їх для архівування. \n\n● Клацніть файл, щоб відобразити меню видобування для вибору параметрів видобування. \n\n● Файли, видобуті за допомогою меню «Відкрити за допомогою» ОС, за замовчуванням зберігаються у внутрішній пам’яті/ZipXtract. Змініть це в налаштуваннях програми. \n\n● Типове розташування для архівування або витягування архівів (у застосунку) є батьківський каталог відповідних файлів. Це можна змінити в налаштуваннях застосунку.</string>
+    <string name="ascending">За зростанням</string>
+    <string name="descending">За спаданням</string>
+    <string name="sort_by">Сортувати за</string>
+    <string name="name">Назва</string>
+    <string name="size">Розмір</string>
+    <string name="time_of_creation">Змінено</string>
+    <string name="extension">Розширення</string>
+    <string name="close">Закрити</string>
+    <string name="extract_path">Тека видобутих файлів</string>
+    <string name="archive_path">Тека з архівними файлами</string>
+    <string name="archive_path_summary">Змініть стандартну теку вилучення. \nТиповою є «батьківська тека»</string>
+    <string name="extract_path_summary">Змініть стандартну теку вилучення. \nТипова — «батьківська тека» або внутрішнє сховище / ZipXtract (для витягнутого архіву меню «Відкрити за допомогою»)</string>
+    <string name="compress_tar">Архівувати в TAR</string>
+    <string name="compression_success">Успішно стиснуто</string>
+    <string name="archive_success">Файл успішно заархівовано</string>
+    <string name="tar_creation_success">Файл TAR успішно заархівовано</string>
+    <string name="file_deleted">Видалено</string>
+    <string name="operation_cancelled">Операцію скасовано</string>
+    <string name="tar_creation_failed">Не вдалося архівувати TAR-файл</string>
+    <string name="compression_failed">Не вдалося стиснути</string>
+    <string name="general_error_msg">Сталася неочікувана помилка</string>
+    <string name="unsupported_compression_format">Цей формат стиснення не підтримується</string>
 </resources>
