--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="compression_method">压缩方式</string>
-    <string name="copied_to_clipboard">已拷贝到剪贴板</string>
+    <string name="copied_to_clipboard">已复制到剪贴板</string>
     <string name="settings_info_text">文件的默认加密方法是 AES，它提供了高级别的安全性。但是，请注意，AES 加密可能非常耗时，尤其是在低端设备上。
 \n
 \n对于设备功能较弱的用户，可以使用ZIP_STANDARD等替代方案。但是，请注意，此方法不提供与 AES 相同的安全级别。
@@ -13,7 +13,7 @@
     <string name="liberapay">Liberapay</string>
     <string name="no_password">无密码</string>
     <string name="ok">OK</string>
-    <string name="create_zip">压缩 ZIP</string>
+    <string name="create_zip">归档ZIP</string>
     <string name="encryption_method">加密方式</string>
     <string name="cancel">取消</string>
     <string name="permission_denied">没有权限</string>
@@ -24,17 +24,96 @@
     <string name="extraction_success">文件提取成功</string>
     <string name="share">分享应用链接</string>
     <string name="enter_password">输入密码</string>
-    <string name="extraction_failed">提取失败:</string>
+    <string name="extraction_failed">加压失败</string>
     <string name="zip_creation_success">Zip 文件创建成功</string>
     <string name="thread_count">线程数</string>
     <string name="sevenz_creation_success">7z 文件创建成功</string>
     <string name="max_available_thread">0 代表最大可用线程</string>
-    <string name="enter_name_of_archive_optional">输入归档名称（可选）</string>
+    <string name="enter_name_of_archive_optional">归档名称</string>
     <string name="solid_compression">固实压缩</string>
     <string name="sevenz_creation_failed">创建 7z 文件出错</string>
-    <string name="compress_sevenz">压缩 7z</string>
+    <string name="compress_sevenz">归档 7z</string>
     <string name="encryption_strength">加密强度</string>
     <string name="_ten">默认为64KB</string>
     <string name="split_zip">Zip分卷</string>
     <string name="split_size_mb">分卷大小</string>
+    <string name="about">关于</string>
+    <string name="home">首页</string>
+    <string name="root_access_summary">允许操作根目录</string>
+    <string name="internal_storage">内部储存</string>
+    <string name="root">根目录</string>
+    <string name="directory_empty">空文件夹</string>
+    <string name="paste">粘贴</string>
+    <string name="storage">储存</string>
+    <string name="archive">归档</string>
+    <string name="show_hide_selected_files">显示/隐藏所选文件</string>
+    <string name="background">背景</string>
+    <string name="open_with">打开</string>
+    <string name="compress_with">压缩:</string>
+    <string name="confirm_delete">删除确认提醒</string>
+    <string name="confirm_delete_message">您是否希望删除该项?</string>
+    <string name="delete">删除</string>
+    <string name="file_path">路径</string>
+    <string name="file_size">大小</string>
+    <string name="last_modified">上次修改</string>
+    <string name="file_info">文件信息</string>
+    <string name="multi_part_extract">解压多部分:</string>
+    <string name="copy_text">复制</string>
+    <string name="info_tip">有用的小技巧</string>
+    <string name="info_tip_description">• 低压文档和夹,或点击档案/文件夹,以选定档案。\n\n• 单击文件以显示选项菜单。\n\n• 使用“Open With”菜单提取的文件存放在内部储存/存储处。 在评估情况下加以修改。\n\n● 存档或提取档案的缺省地点(备注)是各自档案的上级目录。 这可以在评估环境中改变.</string>
+    <string name="crash_log">垃圾日志</string>
+    <string name="move">移动到</string>
+    <string name="copy_to">复制到</string>
+    <string name="action_settings">设置</string>
+    <string name="select_all">选择所有</string>
+    <string name="search">搜索</string>
+    <string name="order">命令</string>
+    <string name="ascending">升序</string>
+    <string name="descending">降序</string>
+    <string name="sort_by">排序按</string>
+    <string name="name">名称</string>
+    <string name="size">大小</string>
+    <string name="time_of_creation">修改</string>
+    <string name="extension">扩展</string>
+    <string name="close">关闭</string>
+    <string name="extract_path">解压文件夹</string>
+    <string name="archive_path">归档文件夹</string>
+    <string name="archive_path_summary">修改默认解压目录。\n默认为“上级目录”</string>
+    <string name="extract_path_summary">修改默认解压目录。\n默认为“上级目录”或内部储存/ZipXtract(“打开为”菜单提取的档案)</string>
+    <string name="compression_success">压缩成功</string>
+    <string name="tar_creation_success">TAR 成功存档</string>
+    <string name="file_deleted">已删除</string>
+    <string name="operation_cancelled">操作取消</string>
+    <string name="tar_creation_failed">创建tar文件失败</string>
+    <string name="compression_failed">压缩失败</string>
+    <string name="general_error_msg">发生意外错误</string>
+    <string name="unsupported_compression_format">不支持该压缩格式</string>
+    <string name="access_denied">拒绝写入</string>
+    <string name="no_files_to_archive">没有选择任何文件</string>
+    <string name="sd_card_not_available">未发现SD卡或外部储存</string>
+    <string name="copying_files">复制..…</string>
+    <string name="moving_files">移动…</string>
+    <string name="delete_ongoing">删除中..…</string>
+    <string name="extraction_ongoing">解压..…</string>
+    <string name="archive_ongoing">归档中…</string>
+    <string name="copying_files_progress">复制文件:%1$d/%2$d</string>
+    <string name="moving_files_progress">移动文件:%1$d/%2$d</string>
+    <string name="deleting_files">删除文件:%1$d/%2$d</string>
+    <string name="extracting_progress">解压中... %1$d %%</string>
+    <string name="compressing_progress">归档中......%1$d %%</string>
+    <string name="compression_ongoing">压缩中…</string>
+    <string name="delete_files_notification_name">删除文件</string>
+    <string name="copy_move_files_notification_name">复制/移动文件</string>
+    <string name="extract_archive_notification_name">解压归档</string>
+    <string name="compress_archive_notification_name">压缩归档</string>
+    <string name="compress_tar">归档TAR</string>
+    <string name="archive_success">文件成功存档</string>
+    <string name="privacy_policy">隐私政策</string>
+    <string name="source_code">源码</string>
+    <string name="license">许可证</string>
+    <string name="report_an_issue">报告问题</string>
+    <string name="grant_access">授予访问权限</string>
+    <string name="storage_access_permission_text">该软件需要你的授权才能访问内置存储，以保证基本功能正常。</string>
+    <string name="sd_card">SD卡</string>
+    <string name="root_access">操作根目录</string>
 </resources>
