--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="no_file_selected">Няма Избран Файл</string>
+    <string name="no_file_selected">Няма избран файл</string>
     <string name="create_zip">ZIP архив</string>
     <string name="folder">Папка</string>
-    <string name="donate">Дарете</string>
+    <string name="donate">Дарение</string>
     <string name="liberapay">Liberapay</string>
     <string name="compression_method">Метод на компресиране</string>
     <string name="ok">Добре</string>
     <string name="enter_password">Въведете парола</string>
     <string name="cancel">Отказ</string>
-    <string name="share">Сподели връзка на приложението</string>
+    <string name="share">Споделяне на връзка към приложението</string>
     <string name="compress_sevenz">7z архив</string>
     <string name="thread_count">Брой нишки</string>
     <string name="max_available_thread">0 за максимален брой налични нишки</string>
@@ -19,7 +19,7 @@
     <string name="split_zip">Разделен ZIP</string>
     <string name="encryption_strength">Надеждно шифроване</string>
     <string name="_ten">По подразбиране е 64kb</string>
-    <string name="extract">Извлечение</string>
+    <string name="extract">Извличане</string>
     <string name="settings_info_text">Методът за шифроване по подразбиране за файлове е AES, който осигурява високо ниво на сигурност. Все пак, имайте предвид, че AES шифроването може да отнеме много време, особено на устройства от по-нисък клас.\n\nЗа потребители с по-малко мощни устройства може да се използва алтернатива като ZIP_STANDARD. Имайте предвид обаче, че този метод не предлага същото ниво на сигурност като AES.\n\nАко сигурността е основната ви грижа, силно препоръчваме да използвате AES въпреки по-дългото време за обработка.</string>
     <string name="encryption_method">Метод на шифроване</string>
     <string name="zip_creation_success">ZIP файлът е архивиран успешно</string>
@@ -49,7 +49,7 @@
     <string name="internal_storage">Вътрешна памет</string>
     <string name="root">Основен</string>
     <string name="directory_empty">Папката е празна</string>
-    <string name="paste">Поставете</string>
+    <string name="paste">Поставяне</string>
     <string name="archive">Архив</string>
     <string name="open_with">Отворете с</string>
     <string name="compress_with">Компресирайте с:</string>
@@ -57,7 +57,7 @@
     <string name="confirm_delete_message">Сигурни ли сте, че искате да изтриете този елемент?</string>
     <string name="file_path">Път</string>
     <string name="file_size">Размер</string>
-    <string name="report_an_issue">Докладвайте за проблем</string>
+    <string name="report_an_issue">Докладване на проблем</string>
     <string name="compression_ongoing">Компресиране…</string>
     <string name="show_hide_selected_files">Показване/Скриване на избраните файлове</string>
     <string name="operation_cancelled">Операцията е отменена</string>
@@ -90,8 +90,8 @@
     <string name="file_deleted">Изтрито</string>
     <string name="compression_failed">Неуспешно компресиране</string>
     <string name="compression_success">Успешно компресиране</string>
-    <string name="general_error_msg">Възникна неочаквана грешка</string>
-    <string name="unsupported_compression_format">Този формат на компресия не се поддържа</string>
+    <string name="general_error_msg">Възникна неочаквана грешка.</string>
+    <string name="unsupported_compression_format">Този формат на компресия не се поддържа.</string>
     <string name="access_denied">Достъпът е отказан</string>
     <string name="no_files_to_archive">Няма избрани файлове за архивиране</string>
     <string name="sd_card_not_available">SD картата или външното хранилище не са открити</string>
@@ -112,4 +112,8 @@
     <string name="copy_text">Копирай</string>
     <string name="delete_files_notification_name">Изтриване на файл</string>
     <string name="info_tip_description">● Натиснете продължително файлове и папки или щракнете върху иконите на файлове/папки, за да ги изберете за архивира.\n\n● Щракнете върху файл, за да се покаже менюто за извличане за избор на опции за извличане.\n\n● Файловете, извлечени с помощта на менюто „Отваряне с“ на операционната система, се съхраняват във вътрешно хранилище/ZipXtract по подразбиране. Променете това в настройките на приложението.\n\n● Местоположението по подразбиране за архивиране или извличане на архиви (в рамките на приложението) е главната директория на съответния файл(ове). Това може да се промени в настройките на приложението.</string>
+    <string name="passwords_do_not_match">Паролите не съвпадат</string>
+    <string name="wrong_password">Грешна парола</string>
+    <string name="confirm_password">Потвърдете паролата</string>
+    <string name="file_already_exists">Файлът вече съществува</string>
 </resources>
