--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -108,12 +108,16 @@
     <string name="operation_cancelled">Vorgang abgebrochen</string>
     <string name="tar_creation_failed">Fehler beim Archivieren der TAR-Datei</string>
     <string name="compression_failed">Komprimierung fehlgeschlagen</string>
-    <string name="general_error_msg">Ein unerwarteter Fehler ist aufgetreten</string>
-    <string name="unsupported_compression_format">Dieses Kompressionsformat wird nicht unterstützt</string>
+    <string name="general_error_msg">Ein unerwarteter Fehler ist aufgetreten.</string>
+    <string name="unsupported_compression_format">Dieses Komprimierungsformat wird nicht unterstützt.</string>
     <string name="access_denied">Zugang verweigert</string>
     <string name="no_files_to_archive">Für die Archivierung wurden keine Dateien ausgewählt</string>
     <string name="sd_card_not_available">SD-Karte oder externer Speicherung nicht erkannt</string>
     <string name="copying_files">Wird kopiert …</string>
     <string name="moving_files">Wird verschoben …</string>
     <string name="delete_ongoing">Wird gelöscht …</string>
+    <string name="passwords_do_not_match">Passwort passt nicht</string>
+    <string name="confirm_password">Passwort bestätigen</string>
+    <string name="wrong_password">Falsches Passwort</string>
+    <string name="file_already_exists">Datei existiert bereits</string>
 </resources>
